welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: too many arguments for method getX: ()Int
	while (!getX(getMondeLargeur()) && !getY(getMondeHauteur())) {
                    ^